feat: add more detailed GC log option for Windows